--- a/.gitignore
+++ b/.gitignore
@@ -103,5 +103,6 @@ flycheck_*.el
 # network security
 /network-security.data
 
+.cmake
 
 # End of https://www.toptal.com/developers/gitignore/api/c++,cmake,emacs
