--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,9 @@ cmake_minimum_required(VERSION 3.10)
 # set the project name
 project(SpaceInvaders)
 
-# add the executable
-add_executable(SpaceInvaders main.cpp alien.cpp window.cpp buffer.cpp buffer_renderer.cpp)
+add_compile_options(-Wall -Wextra -pedantic)
 
-target_link_libraries(SpaceInvaders PUBLIC glfw GLEW GL)
+# add the executable
+add_executable(SpaceInvaders main.cpp alien.cpp window.cpp)
+
+target_link_libraries(SpaceInvaders PUBLIC pthread SDL2)
